# cosmopower-slim

./: README.md  pyproject.toml
src/cosmopower_slim/: __init__.py  cosmopower_NN.py
src/cosmopower_slim/trained_models/: PKLIN_NN.pkl
